[project]
name = "course-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.13",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.3.1",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langgraph-cli[inmem]>=0.4.31",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
